--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "reactapp1",
   "version": "0.1.0",
+  "main": "index.js",
+  "files": [
+    "*.js",
+    "src/**/*.js"
+  ],
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
